--- a/style/style.css
+++ b/style/style.css
@@ -33,3 +33,27 @@ section#telefone{
     background: url('../imagens/frame-iphone.png') no-repeat;
     
 }
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
+section#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.404);
+    box-sizing: border-box;
+    
+}
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img:hover{
+    border: 2px solid rgba(245, 245, 245, 0.473);
+    transform: translate(-2px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.719);
+    transition: transform .3s, border .4s;
+}
